...
            app:layout_constraintLeft_toRightOf="@id/crypto_icon"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="22dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            tools:text="Bitcoin"/>

        <TextView
            android:id="@+id/crypto_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
...
