...
    
    <!-- Generals -->
    <string name="customer_frozen">Your account has been frozen.</string>
    <string name="customer_frozen_details">Please contact customer support.</string>
    <string name="customer_frozen_button">Continue</string>

    <string name="list_prices_asset_component_search">Search</string>
    <string name="list_prices_asset_component_header_currency">Currency</string>
    <string name="list_prices_asset_component_header_price">Price</string>

    <string name="trade_flow_text_field_amount_placeholder">Amount </string>
    <string name="trade_flow_buy_action_button">Buy</string>
    <string name="trade_flow_sell_action_button">Sell</string>
...
